--- a/index.html
+++ b/index.html
@@ -4,20 +4,102 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Biker Zone</title>
+    <title>Justice</title>
     <!-- daisy ui and tailwind cdn -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+
+    <style>
+        .font-garamond {
+            font-family: "EB Garamond", serif;
+        }
+
+        .font-poppins {
+            font-family: "Poppins", sans-serif;
+        }
+    </style>
 </head>
+
 <body>
-    <header>
-        
+    <header class="max-w-[73.125rem] mx-auto mt-3 lg:mt-[3.13rem]">
+        <div class="navbar font-poppins">
+            <div class="navbar-start max-lg:w-full max-lg:justify-between text-base text-[#707070]">
+                <div class="dropdown">
+                    <div tabindex="0" role="button" class="btn btn-ghost px-0 lg:hidden">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                            stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M4 6h16M4 12h8m-8 6h16" />
+                        </svg>
+                    </div>
+                    <ul tabindex="0"
+                        class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow">
+                        <li><a>Home</a></li>
+                        <li>
+                            <a>Services</a>
+                            <ul class="p-2">
+                                <li><a>Service 1</a></li>
+                                <li><a>Service 2</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a>Cases</a>
+                            <ul class="p-2">
+                                <li><a>Case 1</a></li>
+                                <li><a>Case 2</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="">Blog</a></li>
+                        <li><a href="">Contact Us</a></li>
+                        <li><a href="" class="btn bg-[#B68C5A] rounded-lg my-2 text-white text-sm px-5 py-4">Free Consultation</a></li>
+                    </ul>
+                </div>
+                <div class="">
+                    <a class="" href="#"> <img class="w-full" src="images/logo2.png" alt=""></a>
+                </div>
+            </div>
+            <div class="navbar-center hidden text-base text-[#707070] lg:flex">
+                <ul class="menu menu-horizontal px-1 gap-5">
+                    <li><a>Home</a></li>
+                    <li>
+                        <details>
+                            <summary>Services</summary>
+                            <ul class="p-2">
+                                <li><a>Service</a></li>
+                                <li><a>Service</a></li>
+                            </ul>
+                        </details>
+                    </li>
+                    <li>
+                        <details>
+                            <summary>Cases</summary>
+                            <ul class="p-2">
+                                <li><a>Case</a></li>
+                                <li><a>Case</a></li>
+                            </ul>
+                        </details>
+                    </li>
+                    <li><a href="">Blog</a></li>
+                    <li><a href="">Contact Us</a></li>
+                </ul>
+            </div>
+            <div class="navbar-end hidden lg:flex">
+                <a href="" class="btn bg-[#B68C5A] rounded-lg text-white text-lg px-[1.81rem] py-6">Free Consultation</a>
+            </div>
+        </div>
     </header>
-    <main>
+    <main class="max-w-[73.125rem] mx-auto">
 
     </main>
     <footer>
 
     </footer>
 </body>
+
 </html>
