--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
         .font-poppins {
             font-family: "Poppins", sans-serif;
         }
-
     </style>
 </head>
 
@@ -98,19 +97,111 @@
         </div>
     </header>
     <main class="max-w-[73.125rem] mx-auto">
-        <section class="bg-[url('images/banner.png')] bg-no-repeat">
+        <section class="bg-[url('images/banner.png')] bg-no-repeat mb-6 md:mb-[5.5rem] lg:mb-[7.5rem]">
             <div class="py-[6.5rem] max-w-[43rem] mx-auto text-center">
-                <h1 class="text-3xl md:text-5xl lg:text-7xl font-garamond font-extrabold leading-[3rem] md:leading-[4rem] lg:leading-[5.3125rem] text-white mb-6">We Provide Effective
+                <h1
+                    class="text-3xl md:text-5xl lg:text-7xl font-garamond font-extrabold leading-[3rem] md:leading-[4rem] lg:leading-[5.3125rem] text-white mb-6">
+                    We Provide Effective
                     Legal Solutions</h1>
-                <p class="text-xs md:text-sm lg:text-base px-3 md:px-0 font-normal leading-[1.625rem] text-[#E7E7E7] mb-8">There are many variations of passages
+                <p
+                    class="text-sm md:text-base px-3 md:px-0 font-normal leading-[1.625rem] text-[#E7E7E7] mb-8">
+                    There are many variations of passages
                     of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected
                     humour.</p>
                 <form action="" class="flex flex-col items-center justify-center md:flex-row gap-6">
                     <input
                         class="w-[90%] md:w-[50%] lg:w-full max-w-[31.25rem] bg-white text-base text-center md:text-left rounded-lg font-normal leading-[1.625rem] px-5 py-4"
                         type="search" placeholder="Search your services" name="" id="">
-                    <input class="w-full max-w-[9.375rem] btn rounded-lg bg-[#B68C5A] text-xl h-full leading-none border border-[#B68C5A] font-semibold text-white py-[1.06rem] px-[2.44rem]" type="submit" value="Search">
+                    <input
+                        class="w-full max-w-[9.375rem] btn rounded-lg bg-[#B68C5A] text-xl h-full leading-none border border-[#B68C5A] font-semibold text-white py-[1.06rem] px-[2.44rem]"
+                        type="submit" value="Search">
                 </form>
+            </div>
+        </section>
+        <section>
+            <h2 class="font-garamond text-3xl md:text-[2.5rem] font-extrabold text-center text-[#414040] mb-6">The Legal Practice Area</h2>
+            <p class="text-sm md:text-base font-normal leading-[1.625rem] text-[#707070] w-[90%] max-w-[44.625rem] text-center mx-auto mb-[4rem]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
+                in some form, by injected humour.</p>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 place-items-center">
+                <div class="flex flex-col w-full max-w-[25.0625rem] items-center hover:bg-linear-[180deg,#F3F3F3_0%,rgba(243,243,243,0.00)_100%] border border-[#E7E7E7] pt-14 pb-14 lg:pb-[4.44rem] px-8 md:px-[4.45rem]">
+                    <figure class="mb-8">
+                        <img src="images/business.png" alt="Area of practice" />
+                    </figure>
+                    <div class="">
+                        <h2 class="flex justify-center font-garamond text-2xl md:text-[2rem] text-[#414040] font-extrabold mb-6">Business Law</h2>
+                        <p class="text-sm lg:text-base font-normal leading-[1.625rem] text-[#707070] text-center mb-8">There are many variations of passages of Lorem Ipsum available, but the
+                            majority have suffered alteration in some form, by injected humour.</p>
+                        <div class="flex justify-center">
+                            <button class="cursor-pointer"><img src="images/Frame.png" alt=""></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="flex flex-col w-full max-w-[25.0625rem] items-center hover:bg-linear-[180deg,#F3F3F3_0%,rgba(243,243,243,0.00)_100%] border border-[#E7E7E7] pt-14 pb-14 lg:pb-[4.44rem] px-8 md:px-[4.45rem]">
+                    <figure class="mb-8">
+                        <img src="images/business.png" alt="Area of practice" />
+                    </figure>
+                    <div class="">
+                        <h2 class="flex justify-center font-garamond text-2xl md:text-[2rem] text-[#414040] font-extrabold mb-6">Business Law</h2>
+                        <p class="text-sm lg:text-base font-normal leading-[1.625rem] text-[#707070] text-center mb-8">There are many variations of passages of Lorem Ipsum available, but the
+                            majority have suffered alteration in some form, by injected humour.</p>
+                        <div class="flex justify-center">
+                            <button class="cursor-pointer"><img src="images/Frame.png" alt=""></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="flex flex-col w-full max-w-[25.0625rem] items-center hover:bg-linear-[180deg,#F3F3F3_0%,rgba(243,243,243,0.00)_100%] border border-[#E7E7E7] pt-14 pb-14 lg:pb-[4.44rem] px-8 md:px-[4.45rem]">
+                    <figure class="mb-8">
+                        <img src="images/business.png" alt="Area of practice" />
+                    </figure>
+                    <div class="">
+                        <h2 class="flex justify-center font-garamond text-2xl md:text-[2rem] text-[#414040] font-extrabold mb-6">Business Law</h2>
+                        <p class="text-sm lg:text-base font-normal leading-[1.625rem] text-[#707070] text-center mb-8">There are many variations of passages of Lorem Ipsum available, but the
+                            majority have suffered alteration in some form, by injected humour.</p>
+                        <div class="flex justify-center">
+                            <button class="cursor-pointer"><img src="images/Frame.png" alt=""></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="flex flex-col w-full max-w-[25.0625rem] items-center hover:bg-linear-[180deg,#F3F3F3_0%,rgba(243,243,243,0.00)_100%] border border-[#E7E7E7] pt-14 pb-14 lg:pb-[4.44rem] px-8 md:px-[4.45rem]">
+                    <figure class="mb-8">
+                        <img src="images/business.png" alt="Area of practice" />
+                    </figure>
+                    <div class="">
+                        <h2 class="flex justify-center font-garamond text-2xl md:text-[2rem] text-[#414040] font-extrabold mb-6">Business Law</h2>
+                        <p class="text-sm lg:text-base font-normal leading-[1.625rem] text-[#707070] text-center mb-8">There are many variations of passages of Lorem Ipsum available, but the
+                            majority have suffered alteration in some form, by injected humour.</p>
+                        <div class="flex justify-center">
+                            <button class="cursor-pointer"><img src="images/Frame.png" alt=""></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="flex flex-col w-full max-w-[25.0625rem] items-center hover:bg-linear-[180deg,#F3F3F3_0%,rgba(243,243,243,0.00)_100%] border border-[#E7E7E7] pt-14 pb-14 lg:pb-[4.44rem] px-8 md:px-[4.45rem]">
+                    <figure class="mb-8">
+                        <img src="images/business.png" alt="Area of practice" />
+                    </figure>
+                    <div class="">
+                        <h2 class="flex justify-center font-garamond text-2xl md:text-[2rem] text-[#414040] font-extrabold mb-6">Business Law</h2>
+                        <p class="text-sm lg:text-base font-normal leading-[1.625rem] text-[#707070] text-center mb-8">There are many variations of passages of Lorem Ipsum available, but the
+                            majority have suffered alteration in some form, by injected humour.</p>
+                        <div class="flex justify-center">
+                            <button class="cursor-pointer"><img src="images/Frame.png" alt=""></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="flex flex-col w-full max-w-[25.0625rem] items-center hover:bg-linear-[180deg,#F3F3F3_0%,rgba(243,243,243,0.00)_100%] border border-[#E7E7E7] pt-14 pb-14 lg:pb-[4.44rem] px-8 md:px-[4.45rem]">
+                    <figure class="mb-8">
+                        <img src="images/business.png" alt="Area of practice" />
+                    </figure>
+                    <div class="">
+                        <h2 class="flex justify-center font-garamond text-2xl md:text-[2rem] text-[#414040] font-extrabold mb-6">Business Law</h2>
+                        <p class="text-sm lg:text-base font-normal leading-[1.625rem] text-[#707070] text-center mb-8">There are many variations of passages of Lorem Ipsum available, but the
+                            majority have suffered alteration in some form, by injected humour.</p>
+                        <div class="flex justify-center">
+                            <button class="cursor-pointer"><img src="images/Frame.png" alt=""></button>
+                        </div>
+                    </div>
+                </div>
+                
             </div>
         </section>
     </main>
