Fix responsive issue for service section

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 in some form, by injected humour.</p>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 place-items-center">
                 <div
-                    class="flex flex-col w-full max-w-[25.0625rem] items-center hover:bg-linear-[180deg,#F3F3F3_0%,rgba(243,243,243,0.00)_100%] border border-[#E7E7E7] pt-14 pb-14 xl:pb-[4.44rem] px-4 xl:px-[4.45rem]">
+                    class="flex flex-col w-full max-w-[25.0625rem] items-center hover:bg-linear-[180deg,#F3F3F3_0%,rgba(243,243,243,0.00)_100%] border border-[#E7E7E7] py-14 xl:py-[3rem] px-4 xl:px-[3rem]">
                     <figure class="mb-8">
                         <img src="images/business.png" alt="Area of practice" />
                     </figure>
@@ -157,7 +157,7 @@
                     </div>
                 </div>
                 <div
-                    class="flex flex-col w-full max-w-[25.0625rem] items-center hover:bg-linear-[180deg,#F3F3F3_0%,rgba(243,243,243,0.00)_100%] border border-[#E7E7E7] pt-14 pb-14 xl:pb-[4.44rem] px-4 xl:px-[4.45rem]">
+                    class="flex flex-col w-full max-w-[25.0625rem] items-center hover:bg-linear-[180deg,#F3F3F3_0%,rgba(243,243,243,0.00)_100%] border border-[#E7E7E7] py-14 xl:py-[3rem] px-4 xl:px-[3rem]">
                     <figure class="mb-8">
                         <img src="images/criminal.png" alt="Area of practice" />
                     </figure>
@@ -174,7 +174,7 @@
                     </div>
                 </div>
                 <div
-                    class="flex flex-col w-full max-w-[25.0625rem] items-center hover:bg-linear-[180deg,#F3F3F3_0%,rgba(243,243,243,0.00)_100%] border border-[#E7E7E7] pt-14 pb-14 xl:pb-[4.44rem] px-4 xl:px-[4.45rem]">
+                    class="flex flex-col w-full max-w-[25.0625rem] items-center hover:bg-linear-[180deg,#F3F3F3_0%,rgba(243,243,243,0.00)_100%] border border-[#E7E7E7] py-14 xl:py-[3rem] px-4 xl:px-[3rem]">
                     <figure class="mb-8">
                         <img src="images/child.png" alt="Area of practice" />
                     </figure>
@@ -191,7 +191,7 @@
                     </div>
                 </div>
                 <div
-                    class="flex flex-col w-full max-w-[25.0625rem] items-center hover:bg-linear-[180deg,#F3F3F3_0%,rgba(243,243,243,0.00)_100%] border border-[#E7E7E7] pt-14 pb-14 xl:pb-[4.44rem] px-4 xl:px-[4.45rem]">
+                    class="flex flex-col w-full max-w-[25.0625rem] items-center hover:bg-linear-[180deg,#F3F3F3_0%,rgba(243,243,243,0.00)_100%] border border-[#E7E7E7] py-14 xl:py-[3rem] px-4 xl:px-[3rem]">
                     <figure class="mb-8">
                         <img src="images/education.png" alt="Area of practice" />
                     </figure>
@@ -208,7 +208,7 @@
                     </div>
                 </div>
                 <div
-                    class="flex flex-col w-full max-w-[25.0625rem] items-center hover:bg-linear-[180deg,#F3F3F3_0%,rgba(243,243,243,0.00)_100%] border border-[#E7E7E7] pt-14 pb-14 xl:pb-[4.44rem] px-4 xl:px-[4.45rem]">
+                    class="flex flex-col w-full max-w-[25.0625rem] items-center hover:bg-linear-[180deg,#F3F3F3_0%,rgba(243,243,243,0.00)_100%] border border-[#E7E7E7] py-14 xl:py-[3rem] px-4 xl:px-[3rem]">
                     <figure class="mb-8">
                         <img src="images/divorce.png" alt="Area of practice" />
                     </figure>
@@ -225,7 +225,7 @@
                     </div>
                 </div>
                 <div
-                    class="flex flex-col w-full max-w-[25.0625rem] items-center hover:bg-linear-[180deg,#F3F3F3_0%,rgba(243,243,243,0.00)_100%] border border-[#E7E7E7] pt-14 pb-14 xl:pb-[4.44rem] px-4 xl:px-[4.45rem]">
+                    class="flex flex-col w-full max-w-[25.0625rem] items-center hover:bg-linear-[180deg,#F3F3F3_0%,rgba(243,243,243,0.00)_100%] border border-[#E7E7E7] py-14 xl:py-[3rem] px-4 xl:px-[3rem]">
                     <figure class="mb-8">
                         <img src="images/tax.png" alt="Area of practice" />
                     </figure>
