Design FAQ Section

--- a/index.html
+++ b/index.html
@@ -148,7 +148,8 @@
                         <h2
                             class="flex justify-center font-garamond text-2xl lg:text-[2rem] text-[#414040] font-extrabold mb-6">
                             Business Law</h2>
-                        <p class="text-sm lg:text-base font-normal leading-5 lg:leading-[1.625rem] text-[#707070] text-center mb-8">
+                        <p
+                            class="text-sm lg:text-base font-normal leading-5 lg:leading-[1.625rem] text-[#707070] text-center mb-8">
                             There are many variations of passages of Lorem Ipsum available, but the
                             majority have suffered alteration in some form, by injected humour.</p>
                         <div class="flex justify-center">
@@ -165,7 +166,8 @@
                         <h2
                             class="flex justify-center font-garamond text-2xl lg:text-[2rem] text-[#414040] font-extrabold mb-6">
                             Criminal Law</h2>
-                        <p class="text-sm lg:text-base font-normal leading-5 lg:leading-[1.625rem] text-[#707070] text-center mb-8">
+                        <p
+                            class="text-sm lg:text-base font-normal leading-5 lg:leading-[1.625rem] text-[#707070] text-center mb-8">
                             There are many variations of passages of Lorem Ipsum available, but the
                             majority have suffered alteration in some form, by injected humour.</p>
                         <div class="flex justify-center">
@@ -182,7 +184,8 @@
                         <h2
                             class="flex justify-center font-garamond text-2xl lg:text-[2rem] text-[#414040] font-extrabold mb-6">
                             Child Support</h2>
-                        <p class="text-sm lg:text-base font-normal leading-5 lg:leading-[1.625rem] text-[#707070] text-center mb-8">
+                        <p
+                            class="text-sm lg:text-base font-normal leading-5 lg:leading-[1.625rem] text-[#707070] text-center mb-8">
                             There are many variations of passages of Lorem Ipsum available, but the
                             majority have suffered alteration in some form, by injected humour.</p>
                         <div class="flex justify-center">
@@ -199,7 +202,8 @@
                         <h2
                             class="flex justify-center font-garamond text-2xl lg:text-[2rem] text-[#414040] font-extrabold mb-6">
                             Education Law</h2>
-                        <p class="text-sm lg:text-base font-normal leading-5 lg:leading-[1.625rem] text-[#707070] text-center mb-8">
+                        <p
+                            class="text-sm lg:text-base font-normal leading-5 lg:leading-[1.625rem] text-[#707070] text-center mb-8">
                             There are many variations of passages of Lorem Ipsum available, but the
                             majority have suffered alteration in some form, by injected humour.</p>
                         <div class="flex justify-center">
@@ -216,7 +220,8 @@
                         <h2
                             class="flex justify-center font-garamond text-2xl lg:text-[2rem] text-[#414040] font-extrabold mb-6">
                             Divorce Law</h2>
-                        <p class="text-sm lg:text-base font-normal leading-5 lg:leading-[1.625rem] text-[#707070] text-center mb-8">
+                        <p
+                            class="text-sm lg:text-base font-normal leading-5 lg:leading-[1.625rem] text-[#707070] text-center mb-8">
                             There are many variations of passages of Lorem Ipsum available, but the
                             majority have suffered alteration in some form, by injected humour.</p>
                         <div class="flex justify-center">
@@ -233,7 +238,8 @@
                         <h2
                             class="flex justify-center font-garamond text-2xl lg:text-[2rem] text-[#414040] font-extrabold mb-6">
                             Tax Law</h2>
-                        <p class="text-sm lg:text-base font-normal leading-5 lg:leading-[1.625rem] text-[#707070] text-center mb-8">
+                        <p
+                            class="text-sm lg:text-base font-normal leading-5 lg:leading-[1.625rem] text-[#707070] text-center mb-8">
                             There are many variations of passages of Lorem Ipsum available, but the
                             majority have suffered alteration in some form, by injected humour.</p>
                         <div class="flex justify-center">
@@ -245,15 +251,13 @@
             </div>
         </section>
         <!-- Review Section -->
-        <section class="mb-6 md:mb-[5.5rem] lg:mb-[7.5rem]">
+        <section class="mb-10 md:mb-[5.5rem] lg:mb-[7.5rem]">
             <h2 class="font-garamond text-3xl md:text-[2.5rem] font-extrabold text-center text-[#414040] mb-6">What Our
                 Client Say</h2>
             <p
                 class="text-sm md:text-base font-normal leading-[1.625rem] text-[#707070] w-[90%] max-w-[44.625rem] text-center mx-auto mb-[4rem]">
                 There are many variations of passages of Lorem Ipsum available, but the majority have suffered
                 alteration in some form, by injected humour.</p>
-
-
             <div class="carousel w-full relative rounded-lg">
                 <!-- Slider 1 -->
                 <div id="slide1"
@@ -321,7 +325,46 @@
                         <a href="#slide1" class="text-white">❯</a>
                     </div>
                 </div>
-
+            </div>
+        </section>
+        <!-- FAQ Section -->
+        <section class="mb-6 md:mb-[5.5rem] lg:mb-[7.5rem]">
+            <h2 class="max-md:w-19/20 font-garamond text-3xl md:text-[2.5rem] font-extrabold text-center text-[#414040] mb-6">
+                Frequently Asked Any Questions</h2>
+            <p
+                class="text-sm md:text-base font-normal leading-[1.625rem] text-[#707070] w-[90%] max-w-[44.625rem] text-center mx-auto mb-8 md:mb-[4rem]">
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                alteration in some form, by injected humour.</p>
+            <div class="flex flex-col lg:flex-row items-center gap-[1.88rem]">
+                <div class="w-19/20 lg:w-1/2 flex flex-col gap-4 md:gap-[1.88rem]">
+                    <div class="collapse collapse-plus p-4 lg:p-3 xl:p-4 bg-base-100 border border-base-300">
+                        <input type="radio" name="my-accordion-3" checked="checked" />
+                        <div class="collapse-title font-garamond text-lg md:text-xl xl:text-2xl font-extrabold text-[#414040]">1. Are application fee waivers available?</div>
+                        <div class="collapse-content text-[#707070] text-sm xl:text-base font-normal leading-[1.625rem]">There are many variations of passages of Lorem Ipsum
+                            available, but the majority have suffered alteration in some form, by injected humour.</div>
+                    </div>
+                    <div class="collapse collapse-plus p-4 lg:p-3 xl:p-4 bg-base-100 border border-base-300">
+                        <input type="radio" name="my-accordion-3"/>
+                        <div class="collapse-title font-garamond text-lg md:text-xl xl:text-2xl font-extrabold text-[#414040]">2. Are application fee waivers available?</div>
+                        <div class="collapse-content text-[#707070] text-sm xl:text-base font-normal leading-[1.625rem]">There are many variations of passages of Lorem Ipsum
+                            available, but the majority have suffered alteration in some form, by injected humour.</div>
+                    </div>
+                    <div class="collapse collapse-plus p-4 lg:p-3 xl:p-4 bg-base-100 border border-base-300">
+                        <input type="radio" name="my-accordion-3"/>
+                        <div class="collapse-title font-garamond text-lg md:text-xl xl:text-2xl font-extrabold text-[#414040]">3. Are application fee waivers available?</div>
+                        <div class="collapse-content text-[#707070] text-sm xl:text-base font-normal leading-[1.625rem]">There are many variations of passages of Lorem Ipsum
+                            available, but the majority have suffered alteration in some form, by injected humour.</div>
+                    </div>
+                    <div class="collapse collapse-plus p-4 lg:p-3 xl:p-4 bg-base-100 border border-base-300">
+                        <input type="radio" name="my-accordion-3"/>
+                        <div class="collapse-title font-garamond text-lg md:text-xl xl:text-2xl font-extrabold text-[#414040]">4. Are application fee waivers available?</div>
+                        <div class="collapse-content text-[#707070] text-sm xl:text-base font-normal leading-[1.625rem]">There are many variations of passages of Lorem Ipsum
+                            available, but the majority have suffered alteration in some form, by injected humour.</div>
+                    </div>
+                </div>
+                <div class="flex w-19/20 lg:w-1/2 justify-center">
+                    <img class="w-full max-w-[35.625rem] max-h-[35.825rem]" src="images/faq.png" alt="">
+                </div>
             </div>
         </section>
     </main>
